--- a/web/index.html
+++ b/web/index.html
@@ -31,35 +31,35 @@
       <!-- FORM (we intercept submit to force POST/fetch) -->
       <form id="issueForm" class="no-print">
         <!-- All fields OPTIONAL now -->
-        <label>Employee ID (optional)<br>
-          <input name="employee_id" type="text" placeholder="e.g., EMP-1001">
+        <label>Kullancı No.<br>
+          <input name="employee_id" type="text" placeholder="Örnek, 1, 01, E-1001">
         </label>
 
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:8px;">
-          <label>Full Name (optional)
-            <input name="full_name" type="text" placeholder="e.g., Jane Smith">
+          <label>Kullancı Adı
+            <input name="full_name" type="text" placeholder="Örnek, Kerim">
           </label>
-          <label>Email (optional)
-            <input name="email" type="email" placeholder="e.g., jane@company.com">
+          <label>Eposta
+            <input name="email" type="email" placeholder="eposta">
           </label>
         </div>
 
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:8px;">
-          <label>Role (optional)
+          <label>Görev
             <select name="role">
-              <option value="">-- none --</option>
-              <option>Admin</option>
-              <option>Staff</option>
-              <option>Visitor</option>
-              <option>Security</option>
+              <option value="">----</option>
+              <option>Idarı</option>
+              <option>Personel</option>
+              <option>Ziyaretci</option>
+              <option>Güvenli Sektor</option>
             </select>
           </label>
 
-          <label>Department (optional)
+          <label>Bölüm
             <select name="department">
-              <option value="">-- none --</option>
-              <option>Data Analyst</option>
-              <option>Data Scientist</option>
+              <option value="">----</option>
+              <option>Veri Analyst</option>
+              <option>Veri Bilim</option>
               <option>HR</option>
               <option>ML Engineer</option>
               <option>Software Engineer</option>
@@ -77,16 +77,16 @@
         </div>
 
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:8px;">
-          <label>Valid Minutes
-            <input name="minutes_valid" type="number" value="60" min="0">
+          <label>Aktif Okuma Sureci
+            <input name="minutes_valid" type="number" value="10" min="0">
           </label>
-          <label>Max Scans
-            <input name="max_scans" type="number" value="2" min="1">
+          <label>Maksimum Okuma
+            <input name="max_scans" type="number" value="1" min="1">
           </label>
         </div>
 
         <div style="display:flex;gap:8px;margin-top:12px;">
-          <button type="submit" class="btn">QR Kodu Oluşturun (Generate QR)</button>
+          <button type="submit" class="btn">QR Kodu Oluşturun</button>
           <button type="button" id="btnPrint" class="btn" disabled>yazdir(Print)</button>
         </div>
         <div id="msg" class="muted" style="margin-top:6px;"></div>
@@ -97,8 +97,8 @@
         <h4 style="margin-top:16px;">Payload</h4>
         <div class="row2">
           <input id="payload" type="text" readonly placeholder="MyCompanyGate|<token> will appear here">
-          <button id="btnCopy" class="btn" type="button">Copy</button>
-          <button id="btnVerify" class="btn" type="button" disabled>Test Verify</button>
+          <button id="btnCopy" class="btn" type="button">Kopya</button>
+          <button id="btnVerify" class="btn" type="button" disabled>Doğrulama</button>
         </div>
         <div id="verifyMsg" class="muted" style="margin-top:6px;"></div>
       </div>
@@ -109,12 +109,13 @@
       <div class="qr" id="qrBox"><div class="muted">Henüz bir QR yok</div></div>
       <table id="infoTable" style="display:none;">
         <tbody>
-          <tr><td><b>Full Name</b></td><td id="fn"></td></tr>
-          <tr><td><b>Email</b></td><td id="em"></td></tr>
-          <tr><td><b>Role</b></td><td id="ro"></td></tr>
-          <tr><td><b>Employee ID</b></td><td id="eid"></td></tr>
-          <tr><td><b>Department</b></td><td id="dep"></td></tr>
-          <tr><td><b>Valid Until (Local)</b></td><td id="vu"></td></tr>
+          <tr><td><b>Kullancı Adı</b></td><td id="fn"></td></tr>
+          <tr><td><b>Eposta</b></td><td id="em"></td></tr>
+          <tr><td><b>Görev</b></td><td id="ro"></td></tr>
+          <tr><td><b>Kullancı Numarası</b></td><td id="eid"></td></tr>
+          <tr><td><b>Bölüm</b></td><td id="dep"></td></tr>
+          <tr><td><b>Aktif Okuma Sureci (Local)</b></td><td id="vu"></td></tr>
+          <tr><td><b>Maksımum Okuma</b></td><td id="mo"></td></tr>
           <tr><td><b>Token</b></td><td id="tk" class="muted"></td></tr>
         </tbody>
       </table>
@@ -152,7 +153,7 @@
       printBtn.disabled = true;
       btnVerify.disabled = true;
       infoTable.style.display = 'none';
-      qrBox.innerHTML = '<div class="muted">Generating...</div>';
+      qrBox.innerHTML = '<div class="muted">Oluşturulmaktadır...</div>';
 
       const fd = new FormData(form);
 
@@ -177,12 +178,13 @@
 
         // Person info
         const pi = data.print_info || {};
-        fn.textContent  = pi['Full Name'] || '';
-        em.textContent  = pi['Email'] || '';
-        ro.textContent  = pi['Role'] || '';
-        eid.textContent = pi['Employee ID'] || '';
-        dep.textContent = pi['Department'] || '';
-        vu.textContent  = pi['Valid Until (Local)'] || '';
+        fn.textContent  = pi['Kullancı Adı'] || '';
+        em.textContent  = pi['Eposta'] || '';
+        ro.textContent  = pi['Görev'] || '';
+        eid.textContent = pi['Kullancı No'] || '';
+        dep.textContent = pi['Bölüm'] || '';
+        vu.textContent  = pi['Aktif Okuma Sureci (Local)'] || '';
+        mo.textContent  = pi['Maksımum Okuma'] || '';
         tk.textContent  = token || '';
         infoTable.style.display = 'table';
 
