--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>QR KODU OLUŞTURMA</h1>
-  <p class="muted no-print">All person fields are optional. Data is stored with each QR.</p>
+  <p class="muted no-print">Tüm alanlar isteğe bağlıdır. Veriler her QR koduyla birlikte saklanır.</p>
 
   <div class="row">
     <div class="card">
