--- a/web/index.html
+++ b/web/index.html
@@ -58,20 +58,20 @@
           <label>Bölüm
             <select name="department">
               <option value="">----</option>
-              <option>Veri Analyst</option>
-              <option>Veri Bilim</option>
-              <option>HR</option>
-              <option>ML Engineer</option>
-              <option>Software Engineer</option>
-              <option>Security</option>
-              <option>Operations</option>
-              <option>Support</option>
-              <option>Finance</option>
-              <option>Marketing</option>
-              <option>Sales</option>
-              <option>Product</option>
-              <option>QA</option>
-              <option>Other</option>
+              <option>Veri Analist</option>
+              <option>Veri Mühendis</option>
+              <option>Insan Kaynak(HR) </option>
+              <option>ML Mühendis</option>
+              <option>Yazılım Mühendis</option>
+              <option>Sistem Güvenli</option>
+              <option>Oparasyon</option>
+              <option>Destek Sektor</option>
+              <option>Finanse</option>
+              <option>Pazarlama</option>
+              <option>Satın alma(Sales)</option>
+              <option>Üretim</option>
+              <option>Danışman</option>
+              <option>Diğer-Other</option>
             </select>
           </label>
         </div>
