--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
               <option value="">----</option>
               <option>Veri Analist</option>
               <option>Veri Mühendis</option>
-              <option>Insan Kaynak(HR) </option>
+              <option>Insan Kaynak(HR)</option>
               <option>ML Mühendis</option>
               <option>Yazılım Mühendis</option>
               <option>Sistem Güvenli</option>
@@ -71,7 +71,7 @@
               <option>Satın alma(Sales)</option>
               <option>Üretim</option>
               <option>Danışman</option>
-              <option>Diğer-Other</option>
+              <option>Diger-Other</option>
             </select>
           </label>
         </div>
